add current codebase for testcontainers

--- a/testcontainers/src/main/resources/application.properties
+++ b/testcontainers/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.jpa.hibernate.ddl-auto=
+spring.datasource.url=jdbc:postgresql://localhost:5432/test
+spring.datasource.password=postgres
+spring.datasource.username=postgres
+spring.jpa.hibernate.ddl-auto=validate
+spring.flyway.enabled=true
