--- a/simple-crud-table-with-jsf-and-primefaces/pom.xml
+++ b/simple-crud-table-with-jsf-and-primefaces/pom.xml
@@ -7,6 +7,7 @@
     <groupId>de.rieckpil.blog</groupId>
     <artifactId>simple-crud-table-with-jsf-and-primefaces</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
