update readme and primefaces theme

--- a/simple-crud-table-with-jsf-and-primefaces/src/main/webapp/WEB-INF/web.xml
+++ b/simple-crud-table-with-jsf-and-primefaces/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,11 @@
         <param-value>Development</param-value>
     </context-param>
 
+    <context-param>
+        <param-name>primefaces.THEME</param-name>
+        <param-value>bootstrap</param-value>
+    </context-param>
+
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
