--- a/simple-crud-table-with-jsf-and-primefaces/pom.xml
+++ b/simple-crud-table-with-jsf-and-primefaces/pom.xml
@@ -28,7 +28,11 @@
             <artifactId>primefaces</artifactId>
             <version>6.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.primefaces.themes</groupId>
+            <artifactId>all-themes</artifactId>
+            <version>1.0.10</version>
+        </dependency>
     </dependencies>
 
     <build>
