update code and README for new blog tutorial

--- a/simple-crud-table-with-jsf-and-primefaces/pom.xml
+++ b/simple-crud-table-with-jsf-and-primefaces/pom.xml
@@ -17,6 +17,14 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>prime-repo</id>
+            <name>Prime Repo</name>
+            <url>http://repository.primefaces.org</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>javax</groupId>
