--- a/simple-crud-table-with-jsf-and-primefaces/Dockerfile
+++ b/simple-crud-table-with-jsf-and-primefaces/Dockerfile
@@ -1,2 +1,2 @@
 FROM payara/server-full
-COPY target/crud-table-jsf-primefaces.war $DEPLOY_DIR/ROOT.war
+COPY target/crud-table-jsf-primefaces.war $DEPLOY_DIR
