--- a/embedded-messaging-engine-open-liberty/Dockerfile
+++ b/embedded-messaging-engine-open-liberty/Dockerfile
@@ -1,4 +1,4 @@
 FROM openliberty/open-liberty:latest
 COPY server.xml /config/
 COPY derby.jar /config/
-ADD target/*.war /config/dropins/
+ADD target/embedded-messaging-engine-open-liberty.war /config/dropins/
