--- a/java-ee-api-rate-limiting-with-jwt/pom.xml
+++ b/java-ee-api-rate-limiting-with-jwt/pom.xml
@@ -24,11 +24,14 @@
             <version>8.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.microprofile</groupId>
+            <artifactId>microprofile</artifactId>
+            <version>1.3</version>
+        </dependency>
     </dependencies>
 
     <build>
         <finalName>api-rate-limiting</finalName>
     </build>
-
-
 </project>
