add issuer to configuration

--- a/microprofile-jwt-keycloak-auth/src/main/resources/META-INF/microprofile-config.properties
+++ b/microprofile-jwt-keycloak-auth/src/main/resources/META-INF/microprofile-config.properties
@@ -1,2 +1,3 @@
 message=Very Secure 42!
 mp.jwt.verify.publickey.location=/META-INF/orange.pem
+mp.jwt.verify.issuer=http://localhost:8080/auth/realms/JWT-JEE8
