--- a/microprofile-jwt-keycloak-auth/frontend/package.json
+++ b/microprofile-jwt-keycloak-auth/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "keycloak-js": "^4.8.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
