--- a/pdf-preview-react/package.json
+++ b/pdf-preview-react/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-pdf": "^4.0.2",
+    "react-scripts": "2.1.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.85.0"
   },
   "scripts": {
     "start": "react-scripts start",
