--- a/java-ee-websockets-with-jsf/pom.xml
+++ b/java-ee-websockets-with-jsf/pom.xml
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
-			<version>6.2</version>
+			<version>7.0.RC3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.primefaces.themes</groupId>
