add sample native image run for Java class

--- a/graalvm-intro/Dockerfile
+++ b/graalvm-intro/Dockerfile
@@ -1,1 +1,5 @@
 FROM oracle/graalvm-ce:1.0.0-rc13
+
+COPY src/main/java/de/rieckpil/blog/PrettyPrintJSON.java /tmp/PrettyPrintJSON.java
+
+RUN native-image /tmp/PrettyPrintJSON.java
