update code base for graal vm intro

--- a/graalvm-intro/Dockerfile
+++ b/graalvm-intro/Dockerfile
@@ -1,5 +1,16 @@
 FROM oracle/graalvm-ce:1.0.0-rc13
 
-COPY src/main/java/de/rieckpil/blog/PrettyPrintJSON.java /tmp/PrettyPrintJSON.java
+COPY src/main/java/*.java /tmp/
+COPY prettyMe.json /tmp/
 
-RUN native-image /tmp/PrettyPrintJSON.java
+# compile the Java source code to byte code
+RUN javac /tmp/HelloWorld.java
+RUN javac /tmp/PrettyPrintJSON.java
+
+# create native images
+WORKDIR /tmp
+RUN native-image HelloWorld
+RUN native-image --language:js PrettyPrintJSON
+
+RUN ./helloworld
+RUN ./prettyprintjson < /tmp/prettyMe.json
