add further scripts

--- a/spring-data-postgres-fulltext-search/src/main/resources/application.yml
+++ b/spring-data-postgres-fulltext-search/src/main/resources/application.yml
@@ -2,4 +2,4 @@ spring:
   datasource:
     username: postgres
     password: postgres
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://localhost:5432/postgres  jpa:    hibernate:      ddl-auto: validate
