add running example with PostgreSQL's FTS

--- a/spring-data-postgres-fulltext-search/src/main/resources/application.yml
+++ b/spring-data-postgres-fulltext-search/src/main/resources/application.yml
@@ -3,3 +3,5 @@ spring:
     username: postgres
     password: postgres
     url: jdbc:postgresql://localhost:5432/postgres  jpa:    hibernate:      ddl-auto: validate
+    properties:      hibernate: 
+        dialect: de.rieckpil.blog.ExtendedPostgreSQLDialect
