update existing code for FTS in PostgreSQL

--- a/spring-data-postgres-fulltext-search/src/main/resources/application.yml
+++ b/spring-data-postgres-fulltext-search/src/main/resources/application.yml
@@ -4,4 +4,4 @@ spring:
     password: postgres
     url: jdbc:postgresql://localhost:5432/postgres  jpa:    hibernate:      ddl-auto: validate
     properties:      hibernate: 
-        dialect: de.rieckpil.blog.ExtendedPostgreSQLDialect
+        dialect: de.rieckpil.blog.ExtendedPostgreSQLDialect    show-sql: true
