update sample code base for new blog post

--- a/spring-boot-hibernate-flyway-best-practices/src/main/resources/application.yml
+++ b/spring-boot-hibernate-flyway-best-practices/src/main/resources/application.yml
@@ -6,6 +6,11 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+    properties:
+      hibernate: 
+        jdbc: 
+          lob: 
+            non_contextual_creation: true
 ---
 spring:
   profiles: generatesql
