add ddl generation example

--- a/spring-boot-hibernate-flyway-best-practices/src/main/resources/application.yml
+++ b/spring-boot-hibernate-flyway-best-practices/src/main/resources/application.yml
@@ -14,3 +14,13 @@ spring:
 ---
 spring:
   profiles: generatesql
+  flyway:    enabled: false
+  jpa:
+    properties:
+      javax: 
+        persistence:
+          schema-generation:
+            create-source: metadata
+            scripts:
+              action: create
+              create-target: src/main/resources/ddl_jpa_creation.sql
