--- a/nice-looking-jsf-apps-with-prime-faces-7/Dockerfile
+++ b/nice-looking-jsf-apps-with-prime-faces-7/Dockerfile
@@ -1,2 +1,2 @@
-FROM open-liberty:javaee8-java8-ibm
-COPY target/nice-looking-jsf-apps-with-prime-faces-7.war /config/dropins/
+FROM payara/server-full:5.191
+COPY target/nice-looking-jsf-apps-with-prime-faces-7.war $DEPLOY_DIR
