--- a/nice-looking-jsf-apps-with-prime-faces-7/pom.xml
+++ b/nice-looking-jsf-apps-with-prime-faces-7/pom.xml
@@ -42,6 +42,11 @@
 			<artifactId>all-themes</artifactId>
 			<version>1.0.10</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>0.17.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
