--- a/nice-looking-jsf-apps-with-prime-faces-7/pom.xml
+++ b/nice-looking-jsf-apps-with-prime-faces-7/pom.xml
@@ -38,6 +38,11 @@
 			<version>7.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.omnifaces</groupId>
+			<artifactId>omnifaces</artifactId>
+			<version>3.2</version>
+		</dependency>
+		<dependency>
 			<groupId>org.primefaces.themes</groupId>
 			<artifactId>all-themes</artifactId>
 			<version>1.0.10</version>
