--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: java
-dist: trusty
+dist: bionic  
 jdk:
-- openjdk11
-script: "mvn -B -f demo-crud-application package"
+- openjdk8
+script: 
+  - jdk_switcher use openjdk8
+  - ./buildJdk8Projects.sh
+  - export JAVA_HOME=$HOME/openjdk11
+  - $TRAVIS_BUILD_DIR/install-jdk.sh --install openjdk11 --target $JAVA_HOME
+  - ./buildJdk11Projects.sh
 cache:
   directories:
   - $HOME/.m2
