--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ script:
   - export JAVA_HOME=$HOME/openjdk11
   - $TRAVIS_BUILD_DIR/install-jdk.sh --install openjdk11 --target $JAVA_HOME
   - ./buildJdk11Projects.sh
+before_install:
+  - chmod +x buildJdk8Projects.sh
+  - chmod +x buildJdk11Projects.sh
 cache:
   directories:
   - $HOME/.m2
