--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,28 @@
 language: java
-dist: xenial  
+
+before_script:
+- wget https://github.com/sormuras/bach/raw/master/install-jdk.sh
+- chmod +x buildJdk8Projects.sh
+- chmod +x buildJdk11Projects.sh
+
 jdk:
-- openjdk8
-script: 
-  - jdk_switcher use openjdk8
-  - ./buildJdk8Projects.sh
-  - export JAVA_HOME=$HOME/openjdk11
-  - $TRAVIS_BUILD_DIR/install-jdk.sh --install openjdk11 --target $JAVA_HOME
-  - ./buildJdk11Projects.sh
-before_install:
-  - chmod +x buildJdk8Projects.sh
-  - chmod +x buildJdk11Projects.sh
+  - openjdk8
+
+jobs:
+  include:
+    - stage: ☕ 8
+      script:
+        - jdk_switcher use openjdk8
+        - ./buildJdk8Projects.sh
+    - stage: ☕ 11
+      script:
+        - export JAVA_HOME=$HOME/openjdk11
+        - $TRAVIS_BUILD_DIR/install-jdk.sh --install openjdk11 --target $JAVA_HOME
+        - ./buildJdk11Projects.sh
+
 cache:
   directories:
   - $HOME/.m2
+  
 notifications:
   email: false
