update Travis JDK 11 download

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ jobs:
     - stage: ☕ 11
       script:
         - export JAVA_HOME=$HOME/openjdk11
-        - $TRAVIS_BUILD_DIR/install-jdk.sh --install openjdk11 --target $JAVA_HOME
+        - $TRAVIS_BUILD_DIR/install-jdk.sh -F 11  -W $JAVA_HOME
         - ./buildJdk11Projects.sh
 
 cache:
