optimize memory consumption

--- a/nice-looking-jsf-apps-with-prime-faces-7/Dockerfile
+++ b/nice-looking-jsf-apps-with-prime-faces-7/Dockerfile
@@ -1,2 +1,5 @@
 FROM payara/server-full:5.191
+
+ENV JVM_ARGS="-Xmx512m -Xms256m"
+
 COPY target/nice-looking-jsf-apps-with-prime-faces-7.war $DEPLOY_DIR
