--- a/java-ee-with-kotlin/Dockerfile
+++ b/java-ee-with-kotlin/Dockerfile
@@ -1,2 +1,4 @@
-FROM payara/server-full:5.192
-COPY target/java-ee-with-kotlin.war $DEPLOY_DIR
+FROM open-liberty:kernel-java11
+COPY --chown=1001:0 target/java-ee-with-kotlin.war /config/dropins/
+COPY --chown=1001:0 server.xml /config/
+COPY --chown=1001:0 derby.jar /config/
