--- a/guide-to-jakarta-ee-with-react-and-postgresql/frontend/package.json
+++ b/guide-to-jakarta-ee-with-react-and-postgresql/frontend/package.json
@@ -10,6 +10,8 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.1",
     "typescript": "3.6.3"
   },
   "scripts": {
