add post about Spring Boot 2.2

--- a/whats-new-in-spring-boot-2.2/src/main/resources/application.properties
+++ b/whats-new-in-spring-boot-2.2/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.jmx.enabled=true
 spring.main.lazy-initialization=true
+
+management.endpoint.health.show-components=always
+management.endpoint.health.show-details=when_authorized
+
+management.endpoint.health.group.liveness.include=db,custom-liveness
