--- a/spring-web-client-oauth2-reactive-stack/src/main/resources/application.yml
+++ b/spring-web-client-oauth2-reactive-stack/src/main/resources/application.yml
@@ -4,6 +4,6 @@ spring:
       client:
         registration:
           github:
-            client-id: replace-me
-            client-secret: replace-me
+            client-id: replaceme
+            client-secret: replaceme
             scope: read:user,public_repo
