--- a/review-microshed-testing/Dockerfile
+++ b/review-microshed-testing/Dockerfile
@@ -1,5 +1,6 @@
 FROM open-liberty:kernel-java11
 
+COPY --chown=1001:0  src/main/liberty/config/postgres /config/postgres
+COPY --chown=1001:0  src/main/liberty/config/server.xml /config
+RUN configure.sh
 COPY --chown=1001:0  target/review-microshed-testing.war /config/dropins/
-COPY --chown=1001:0  postgresql-42.2.8.jar /opt/ol/wlp/lib/
-COPY --chown=1001:0  server.xml /config
