--- a/review-microshed-testing/pom.xml
+++ b/review-microshed-testing/pom.xml
@@ -19,6 +19,7 @@
         <mockito-core.version>3.1.0</mockito-core.version>
         <junit-jupiter.version>5.5.0</junit-jupiter.version>
         <microshed-testing.version>0.5</microshed-testing.version>
+        <testcontainers.version>1.12.3</testcontainers.version>
     </properties>
 
     <dependencies>
@@ -56,7 +57,19 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>postgresql</artifactId>
-            <version>1.12.3</version>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>mockserver</artifactId>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-client-java</artifactId>
+            <version>5.5.4</version>
             <scope>test</scope>
         </dependency>
         <dependency>
