--- a/jakarta-ee-react-file-handling/Dockerfile
+++ b/jakarta-ee-react-file-handling/Dockerfile
@@ -1,3 +1,3 @@
 FROM open-liberty:kernel-java11
 COPY --chown=1001:0  target/jakarta-ee-react-file-handling.war /config/dropins/
-COPY --chown=1001:0  server.xml /config
+COPY --chown=1001:0  src/main/liberty/config/server.xml /config
