--- a/jakarta-ee-react-file-handling/pom.xml
+++ b/jakarta-ee-react-file-handling/pom.xml
@@ -34,6 +34,13 @@
       <type>pom</type>
       <scope>provided</scope>
     </dependency>
+    <!--
+        <dependency>
+          <groupId>org.apache.cxf</groupId>
+          <artifactId>cxf-rt-frontend-jaxrs</artifactId>
+          <version>3.3.4</version>
+        </dependency>
+    -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
