--- a/jakarta-ee-react-file-handling/src/main/frontend/package.json
+++ b/jakarta-ee-react-file-handling/src/main/frontend/package.json
@@ -13,6 +13,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2",
     "typescript": "^3.7.3"
   },
   "scripts": {
