rework example to run on Payara

--- a/jakarta-ee-react-file-handling/Dockerfile
+++ b/jakarta-ee-react-file-handling/Dockerfile
@@ -1,3 +1,2 @@
-FROM open-liberty:kernel-java11
-COPY --chown=1001:0  target/jakarta-ee-react-file-handling.war /config/dropins/
-COPY --chown=1001:0  src/main/liberty/config/server.xml /config
+FROM payara/server-full:5.194
+COPY target/jakarta-ee-react-file-handling.war $DEPLOY_DIR
