--- a/jakarta-ee-react-file-handling/pom.xml
+++ b/jakarta-ee-react-file-handling/pom.xml
@@ -15,9 +15,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <jakarta.jakartaee-api.version>8.0.0</jakarta.jakartaee-api.version>
-    <microprofile.version>3.0</microprofile.version>
-    <mockito-core.version>3.1.0</mockito-core.version>
-    <junit-jupiter.version>5.5.0</junit-jupiter.version>
+    <jersey.version>2.29.1</jersey.version>
   </properties>
 
   <dependencies>
@@ -28,30 +26,15 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.eclipse.microprofile</groupId>
-      <artifactId>microprofile</artifactId>
-      <version>${microprofile.version}</version>
-      <type>pom</type>
+      <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-multipart</artifactId>
+      <version>${jersey.version}</version>
       <scope>provided</scope>
-    </dependency>
-    <!--
-        <dependency>
-          <groupId>org.apache.cxf</groupId>
-          <artifactId>cxf-rt-frontend-jaxrs</artifactId>
-          <version>3.3.4</version>
-        </dependency>
-    -->
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter</artifactId>
-      <version>${junit-jupiter.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>${mockito-core.version}</version>
-      <scope>test</scope>
+    </dependency><dependency>
+      <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-server</artifactId>
+      <version>${jersey.version}</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
