adjust travis pipeline

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 language: java
 
 before_script:
-- wget https://github.com/sormuras/bach/raw/master/install-jdk.sh
 - chmod +x buildJdk8Projects.sh
 - chmod +x buildJdk11Projects.sh
-- chmod +x install-jdk.sh
 
 jdk:
   - openjdk8
+  - openjdk11
 jobs:
   include:
     - stage: ☕ 8
@@ -15,9 +14,7 @@ jobs:
         - ./buildJdk8Projects.sh
     - stage: ☕ 11
       script:
-        - echo $JAVA_HOME
-        - export JAVA_HOME=$HOME/openjdk11
-        - $TRAVIS_BUILD_DIR/install-jdk.sh --install openjdk11 --target $JAVA_HOME
+        - jdk_switcher use openjdk11
         - ./buildJdk11Projects.sh
 
 cache:
