add Testcontainers to test application

--- a/spring-boot-hibernate-flyway-best-practices/pom.xml
+++ b/spring-boot-hibernate-flyway-best-practices/pom.xml
@@ -40,6 +40,12 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>1.12.4</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
