fix Maven build errors

--- a/maven-plugins-to-ensure-quality/pom.xml
+++ b/maven-plugins-to-ensure-quality/pom.xml
@@ -28,12 +28,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-            <!-- uncomment to fix enforcer warning <exclusions>
+            <exclusions>
                 <exclusion>
                     <groupId>org.junit.vintage</groupId>
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
-            </exclusions> -->
+            </exclusions>
         </dependency>
     </dependencies>
 
