--- a/review-microshed-testing/Dockerfile
+++ b/review-microshed-testing/Dockerfile
@@ -1,6 +1,7 @@
-FROM open-liberty:kernel-java11
+FROM openliberty/open-liberty:full-java11-openj9-ubi
 
 COPY --chown=1001:0  src/main/liberty/config/postgres /config/postgres
 COPY --chown=1001:0  src/main/liberty/config/server.xml /config
-RUN configure.sh
 COPY --chown=1001:0  target/review-microshed-testing.war /config/dropins/
+
+RUN configure.sh
