--- a/github-actions-java-maven/Dockerfile
+++ b/github-actions-java-maven/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:11-jdk-alpine
+FROM openjdk:11-jdk
 VOLUME /tmp
 COPY target/*.jar app.jar
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
