update workflow for GitHub actions example

--- a/github-actions-java-maven/Dockerfile
+++ b/github-actions-java-maven/Dockerfile
@@ -1,4 +1,5 @@
 FROM openjdk:11-jdk
 VOLUME /tmp
-COPY target/*.jar app.jar
+ARG JAR_FILE=target/*.jar
+COPY ${JAR_FILE} app.jar
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
