--- a/.github/workflows/sampleJavaMavenProject.yml
+++ b/.github/workflows/sampleJavaMavenProject.yml
@@ -19,6 +19,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: compile
+    name: Build Maven project
     steps:
     - uses: actions/checkout@v1
     - uses: actions/cache@v1
@@ -36,19 +37,23 @@ jobs:
     - name: Upload Maven build artifact
       uses: actions/upload-artifact@v1
       with:
-        name: github-actions-sample
+        name: artifact
         path: github-actions-java-maven/target/github-actions-java-maven.jar
   deploy: 
     runs-on: ubuntu-latest  
     needs: build 
+    name: Build Docker container and deploy to Kubernetes
     steps:
     - uses: actions/checkout@v1
     - name: Download Maven build artifact
       uses: actions/download-artifact@v1
       with:
-        name: github-actions-sample
+        name: artifact
     - name: Build Docker container
-      run: cd github-actions-java-maven && docker build -t de.rieckpil.blog/github-actions-sample .
+      run: |
+      docker build \
+        --build-arg JAR_FILE=github-actions-sample/*.jar \
+        -t de.rieckpil.blog/github-actions-sample github-actions-java-maven
     - name: Access secrets
       env: 
         SUPER_SECRET: ${{ secrets.SUPER_SECRET }}
