--- a/.github/workflows/sampleJavaMavenProject.yml
+++ b/.github/workflows/sampleJavaMavenProject.yml
@@ -51,9 +51,9 @@ jobs:
         name: artifact
     - name: Build Docker container
       run: |
-      docker build \
-        --build-arg JAR_FILE=github-actions-sample/*.jar \
-        -t de.rieckpil.blog/github-actions-sample github-actions-java-maven \
+        docker build \
+          --build-arg JAR_FILE=github-actions-sample/*.jar \
+          -t de.rieckpil.blog/github-actions-sample github-actions-java-maven
     - name: Access secrets
       env: 
         SUPER_SECRET: ${{ secrets.SUPER_SECRET }}
