fix path to .jar file

--- a/.github/workflows/sampleJavaMavenProject.yml
+++ b/.github/workflows/sampleJavaMavenProject.yml
@@ -52,7 +52,7 @@ jobs:
     - name: Build Docker container
       run: |
         docker build \
-          --build-arg JAR_FILE=github-actions-sample/*.jar \
+          --build-arg JAR_FILE=artifact/*.jar \
           -t de.rieckpil.blog/github-actions-sample github-actions-java-maven
     - name: Access secrets
       env: 
