move build artifact to correct folder

--- a/github-actions-java-maven/Dockerfile
+++ b/github-actions-java-maven/Dockerfile
@@ -1,5 +1,4 @@
 FROM openjdk:11-jdk
 VOLUME /tmp
-ARG JAR_FILE
-COPY ${JAR_FILE} app.jar
+COPY target/*.jar app.jar
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
